--- a/scss/activities/_blog.scss
+++ b/scss/activities/_blog.scss
@@ -1,56 +1,75 @@
 /* OU Blog
    ======================== */
 
-#page-mod-oublog-view{
-  #region-main{
-    // Info/description section
-    #oublog_info_block.main-description{
-      .card-body{
-        padding:$component-margin !important;
+#page-mod-oublog-view {
+  #region-main {
+    // info/description section
+    #oublog_info_block.main-description {
+      .card-body {
+        padding: $component-padding !important;
+        .card-text {
+          margin: 0;
+          padding: 0;
+        }
       }
     }
     // individual posts
-    .oublog-userpic{
-      padding:0;
-      img.userpicture{
+    .oublog-userpic {
+      padding: 0;
+      img.userpicture {
         border-radius: 50%;
       }
     }
-    #oublog-posts{
+    #oublog-posts {
       margin-bottom: $component-margin-sm;
     }
   }
   // sideblocks
-  #block-region-side-post .block .content ul.oublog-accordion li{
-    margin-bottom:8px;
-    img.userpicture{
-      border-radius: 50%;
-    }
-    h3{
-      font-family: 'KingsBureauGrotFiveOne';
-      color: $body-text;
-      font-size: 1.1rem;
-    }
-    .oublog_statsview_content{
-      margin:$component-margin-xs;
-      .oublog_statsinfo{
-        margin-left:0;
-      }
-      .oublog_statsinfo_bar span.oublogbar{
-        background: transparent;
-      }
-    }
-    #fitem_id_timefilter_commentpoststats{
-      .col-md-3{
-        flex: 0 0 100%;
-        max-width: 100%;
-        .col-form-label.d-inline[for="id_timefilter_commentpoststats"] {
-          padding-right: 0px;
-          padding-left: 0px;
+  #block-region-side-post {
+    .block {
+      // blog usage block
+      &#oublog-discover {
+        .content {
+          ul.oublog-accordion {
+            li {
+              margin-bottom: $component-margin-bottom-xs;
+              .oublog_statsview_content {
+                margin: 0;
+                padding: $component-padding-xs;
+                .oublog_statsinfo {
+                  margin-left: 0;
+                  margin-bottom: $component-margin-bottom-xs;
+                  img.userpicture {
+                    border-radius: 50%;
+                  }
+                }
+                form {
+                  margin: 0;
+                  .row {
+                    border: none;
+                    margin: 0;
+                    padding: 0;
+                    &:not(:last-child) {
+                      margin-bottom: $component-margin-bottom-xs;
+                    }
+                    & > div {
+                      flex: none !important;
+                      max-width: none !important;
+                      margin: 0;
+                      padding: 0;
+                    }
+                  }
+                }
+                .oublog_statsinfo_bar span.oublogbar {
+                  background: transparent;
+                }
+                              }
+              h3 {
+                @extend %h5;
+              }
+            }
+          }
         }
-      }
-      .col-md-9{
-        margin-left:0;
       }
     }
   }
