--- a/scss/activities/_choice.scss
+++ b/scss/activities/_choice.scss
@@ -7,7 +7,7 @@
       text-align: left;
       a {
         // from Common
-        @extend .ds-link;
+        @extend %ds-link;
       }
     }
     .clearer {
