--- a/scss/activities/_lti.scss
+++ b/scss/activities/_lti.scss
@@ -5,6 +5,6 @@
 #page-mod-lti-view {
   #region-main > div:first-child a:link {
     // from Common
-    @extend .bold-link;
+    @extend %bold-link;
   }
 }
