--- a/scss/base/_typography.scss
+++ b/scss/base/_typography.scss
@@ -1,8 +1,8 @@
-/* Typography
-   ======================== */
+// Typography
+//  ==========================
 
 $font-kbg: (
-  family: 'KingsBureauGrot',
+  family: "KingsBureauGrot",
   h1: ( font-size: 2.375rem, line-height: 1.1 ),
   h2: ( font-size: 1.875rem, line-height: 1.25 ),
   h3: ( font-size: 1.5rem, line-height: 1.25 ),
@@ -18,19 +18,19 @@ $font-kbg: (
   btn-lg: ( font-size: 1.25rem !important, line-height: 1.5 !important)
 );
 $font-os: (
-  family: 'Open Sans, sans-serif',
+  family: "Open Sans, sans-serif",
   p: ( font-size: 1rem, line-height: 1.5 ),
   caption: ( font-size: 0.833rem, line-height: 1.5 ),
   key-concept: ( font-size: 1rem, line-height: 1.5 )
 );
 $font-kcd: (
-  family:  'KingsCaslonDisplay',
+  family:  "KingsCaslonDisplay",
   quote-body: ( font-size: 1.5rem, line-height: 1.25 ),
   quote-body-sm: ( font-size: 1.25rem, line-height: 1.25 )
 );
 
 $font-default: $font-kbg;
-@function _fontset-feature($feature, $family: $font-default, $set: 'base'){
+@function _fontset-feature($feature, $family: $font-default, $set: "base"){
   $result: map-get(map-get($family, $set), $feature);
   @return ($result);
 }
@@ -53,11 +53,11 @@ $line-height:$font-size) {
   }
 }
 
-.sidebar-header {
+%sidebar-header {
   padding: 0;
   margin: 0;
   color: $midnight-blue;
-  font-family: 'KingsBureauGrot' !important;
+  font-family: "KingsBureauGrot" !important;
   font-size: 1.125rem;
   line-height: 1.4;
 }
@@ -68,29 +68,30 @@ html, body {
 }
 
 h1, h2, h3, h4, h5, h6,
-.h1, .h2, .h3, .h4, .h5, .h6
+.h1, .h2, .h3, .h4, .h5, .h6,
+%h1, %h2, %h3, %h4, %h5, %h6,
 .quote-attribution {
-  font-family: 'KingsBureauGrot';
+  font-family: "KingsBureauGrot";
   color: $headings;
   margin-top: 0;
   margin-bottom: $component-margin-bottom-sm;
 }
-h6, .h6 {
-  font-family: 'Open Sans', sans-serif;
+h6, .h6, %h6 {
+  font-family: "Open Sans", sans-serif;
   font-weight: 700 !important;
 }
-h1, .h1 { @include font-scale(h1-sm) ;}
-h2, .h2 { @include font-scale(h2-sm) ;}
-h3, .h3 { @include font-scale(h3-sm) ;}
-h4, .h4 {
+h1, .h1, %h1 { @include font-scale(h1-sm) ;}
+h2, .h2, %h2 { @include font-scale(h2-sm) ;}
+h3, .h3, %h3 { @include font-scale(h3-sm) ;}
+h4, .h4, %h4 {
   @include font-scale(h4-sm);
   letter-spacing: 0.25px;
 }
-h5, .h5 {
+h5, .h5, %h5 {
   @include font-scale(h56-sm);
   letter-spacing: 0.5px;
 }
-h6, .h6 { @include font-scale(h56-sm) ;}
+h6, .h6, %h6 { @include font-scale(h56-sm) ;}
 
 // allow margin above headers in main region to increase to 36px
 #region-main .no-overflow {
@@ -106,8 +107,13 @@ p {
   margin-bottom: $component-margin-bottom;
   color: $body-text;
 }
-.caption {
+%caption {
   @include font-scale(caption, $font-os);
+  max-width: fit-content;
+  margin: $component-margin-bottom-xs 0 0 0;
+}
+.caption {
+  @extend %caption;
 }
 .quote-box {
   .quote-body {
@@ -116,17 +122,17 @@ p {
   }
 }
 select, option {
-  font-family: 'Open Sans', sans-serif;
+  font-family: "Open Sans", sans-serif;
 }
 
 // large screen fonts
 @media only screen and (min-width: $neo-breakpoint) {
-  h1, .h1 { @include font-scale(h1) ;}
-  h2, .h2 { @include font-scale(h2) ;}
-  h3, .h3 { @include font-scale(h3) ;}
-  h4, .h4 { @include font-scale(h4) ;}
-  h5, .h5 { @include font-scale(h5) ;}
-  h6, .h6 { @include font-scale(h6) ;}
+  h1, .h1, %h1 { @include font-scale(h1) ;}
+  h2, .h2, %h2 { @include font-scale(h2) ;}
+  h3, .h3, %h3 { @include font-scale(h3) ;}
+  h4, .h4, %h4 { @include font-scale(h4) ;}
+  h5, .h5, %h6 { @include font-scale(h5) ;}
+  h6, .h6, %h6 { @include font-scale(h6) ;}
   .quote-box {
     .quote-body {
       @include font-scale(quote-body, $font-kcd);
@@ -163,7 +169,7 @@ li {
   p a,
   li p a,
   figcaption a {
-    @extend .ds-link;
+    @extend %ds-link;
     // icon for external links
     i.open-icon {
       display: inline-block;
@@ -171,7 +177,7 @@ li {
       vertical-align: baseline;
       transform: translateY(-10%);
     }
-    .sr-link-message{
+    .sr-link-message {
       display: inline-block;
     } 
   }
@@ -183,7 +189,7 @@ li {
     // link download
     // download button in components/_button
     &.link-download {
-      @include bg-colour-opacity($yellow, 0.2);
+      background-color: tint($yellow, 80%);
       padding: 2px 4px;
     }
   }
@@ -225,6 +231,10 @@ li {
     border-width: 0 0 1px 0;
   }
 }
+// custom class for urls to wrap
+.break-all {
+  word-break: break-all;
+}
 
 // hide screenreader only note on external links in editor view of books
 .editing {
@@ -253,13 +263,13 @@ pre {
 }
 code {
   border: 1px solid $block-header;
-  @include bg-colour-opacity($block-background, 0.2);
+  background-color: tint($block-background, 80%);
   color: $kings-red;
   border-radius: 4px;
 }
-table code{
-  //so that the code is still visible when cells are highlighted
-  background:#F7F7F9!important;
+table code {
+  // so that the code is still visible when cells are highlighted
+  background: #F7F7F9! important;
 }
 
 // remove page heading underline
@@ -279,7 +289,7 @@ header.navbar {
   }
   form#search {
     button {
-      font-family: 'Open Sans',sans-serif;
+      font-family: "Open Sans",sans-serif;
       font-size: 1.08rem !important;
       padding: 6px 18px !important; 
     }
