--- a/scss/components/_form.scss
+++ b/scss/components/_form.scss
@@ -8,9 +8,7 @@
   }
 }
 
-.singleselect form,
-.singleselect select,
-.singleselect select option {
-  font-family: 'KingsBureauGrotFiveOne';
+// override theme font size of 11px
+.singleselect {
   font-size: 1rem;
 }
