--- a/scss/components/_viewhide.scss
+++ b/scss/components/_viewhide.scss
@@ -7,11 +7,12 @@
 .view-model-answer-container,
 .view-description-container {
   // from Common
-  @extend .note-container;
+  @extend %note-container;
   .card-body {
     margin-top: $component-margin;
   }
 }
+
 // display in block in atto editor
 .editor_atto_content {
  .view-generic-container,
@@ -22,15 +23,11 @@
    & > div {
      display: block !important;
     }
-  }
-}
-
-//description used in float box
-.float-box{
-  .img-container{
-    .view-description-container{
-      max-width: 310px;
-      margin-top: $component-margin-xs;
+    // disabled button
+    button {
+      background-color: $block-background !important;
+      color: $slate-grey !important;
+      pointer-events: none;
     }
   }
 }
