--- a/scss/main.scss
+++ b/scss/main.scss
@@ -1,59 +1,60 @@
-@import '../css/normalize.css';
+@import "../css/normalize.css";
 
-@import 'utilities/variables';
+@import "utilities/variables";
 
-@import 'base/fonts';
-@import 'base/typography';
-@import 'base/common';
+@import "base/fonts";
+@import "base/icons";
+@import "base/typography";
+@import "base/common";
 
-@import 'layout/navigation';
-// @import 'layout/grid';
-@import 'layout/header';
-@import 'layout/pagelayout';
-@import 'layout/sidebar';
+// @import "layout/grid";
+@import "layout/header";
+@import "layout/navigation";
+@import "layout/pagelayout";
+@import "layout/sidebar";
 
-@import 'components/academicnote';
-@import 'components/activitylabel';
-@import 'components/alert';
-@import 'components/button';
-@import 'components/card';
-@import 'components/carousel';
-@import 'components/newcarousel';
-@import 'components/collapse';
-@import 'components/embed';
-@import 'components/footnotes';
-@import 'components/form';
-@import 'components/hero';
-@import 'components/images';
-@import 'components/infobox';
-@import 'components/modal';
-@import 'components/process';
-@import 'components/quotation';
-@import 'components/screenreaderdescription';
-@import 'components/scrollbar';
-@import 'components/table';
-@import 'components/timeline';
-@import 'components/viewhide';
+@import "components/academicnote";
+@import "components/activitylabel";
+@import "components/alert";
+@import "components/button";
+@import "components/card";
+@import "components/carousel";
+@import "components/newcarousel";
+@import "components/collapse";
+@import "components/embed";
+@import "components/footnotes";
+@import "components/form";
+@import "components/hero";
+@import "components/images";
+@import "components/infobox";
+@import "components/modal";
+@import "components/process";
+@import "components/quotation";
+@import "components/screenreaderdescription";
+@import "components/scrollbar";
+@import "components/table";
+@import "components/timeline";
+@import "components/viewhide";
 
-@import 'activities/blog';
-@import 'activities/book';
-@import 'activities/choice';
-@import 'activities/contentbank';
-@import 'activities/database';
-@import 'activities/feedback';
-@import 'activities/file';
-@import 'activities/forum';
-@import 'activities/kalvidassign';
-@import 'activities/lesson';
-@import 'activities/lti';
-@import 'activities/questionnaire';
-@import 'activities/quiz';
-@import 'activities/tab';
-@import 'activities/turnitin';
-@import 'activities/url';
-@import 'activities/webinar';
+@import "activities/blog";
+@import "activities/book";
+@import "activities/choice";
+@import "activities/contentbank";
+@import "activities/database";
+@import "activities/feedback";
+@import "activities/file";
+@import "activities/forum";
+@import "activities/kalvidassign";
+@import "activities/lesson";
+@import "activities/lti";
+@import "activities/questionnaire";
+@import "activities/quiz";
+@import "activities/tab";
+@import "activities/turnitin";
+@import "activities/url";
+@import "activities/webinar";
 
-@import 'pages/editor';
-@import 'pages/filemanager';
-@import 'pages/home';
-@import 'pages/logs';
+@import "pages/editor";
+@import "pages/filemanager";
+@import "pages/home";
+@import "pages/logs";
