--- a/scss/pages/_filemanager.scss
+++ b/scss/pages/_filemanager.scss
@@ -13,9 +13,9 @@
     background-color: transparent;
     a.btn {
       &.btn-secondary {
-        @extend .btn, .btn-secondary;
-        padding: 0!important;
-        margin: 0 0 0.5rem 0 !important;
+        @extend %btn-secondary;
+        padding: 0 !important;
+        margin: 0 0 $component-margin-xs 0 !important;
         .icon {
           width: 60%;
           height: auto;
@@ -28,7 +28,7 @@
   .fp-viewbar {
     border: none;
     a.btn.btn-secondary {
-      margin:0 0.25rem 0.5rem 0 !important;
+      margin: 0 0.25rem 0.5rem 0 !important;
     }
   }
 }
