--- a/scss/activities/_book.scss
+++ b/scss/activities/_book.scss
@@ -13,8 +13,8 @@
         .print-book-btn {
           margin: unset !important;
           &::before {
-            @extend .icon-before;
-            content: '\f02f';
+            @extend %icon-before;
+            @include fa-content($fa-print);
             margin-right: $component-margin-xs;
           }
         }
@@ -22,7 +22,10 @@
       & > div:first-of-type {
         & > h2:first-of-type {
           // override theme book heading style
-          @extend .h2;
+          @extend %h2;
+        }
+        // only when the print book button is present
+        & > #print-btn-container ~ h2:first-of-type {
           margin-bottom: $component-margin-bottom-lg;
           // prevent the title from overlapping with the print button
           margin-right: calc(88px + #{$component-margin-sm});
@@ -31,7 +34,7 @@
       .book_content {
         // override theme chapter heading style
         & > h3 {
-          @extend .h3;
+          @extend %h3;
         }
         & > div > *:last-child {
           margin-bottom: 0;
@@ -111,7 +114,7 @@
       &.bookprev:hover::before,
       &.booknext:hover::after,
       &.bookexit:hover::after {
-        @include colour-opacity($midnight-blue, 0.85);
+        color: tint($midnight-blue, 15%);
       }
     }
     ul {
@@ -129,7 +132,7 @@
         display: inline-flex;
         justify-content: center;
         align-items: center;
-        font-family: 'KingsBureauGrot';
+        font-family: "KingsBureauGrot";
         font-size: 1.5rem;
         height: 2.25rem;
         margin: 0 0.375rem;
@@ -153,7 +156,7 @@
           min-width: 2.25rem;
           &:hover {
             text-decoration: none;
-            @include colour-opacity($midnight-blue, 0.85);
+            color: tint($midnight-blue, 15%);
           }
         }
         @media only screen and (min-width: $neo-breakpoint) {
@@ -175,7 +178,7 @@
           }
           &:not(:first-child) + .mob-prev::before,
           &.mob-next:not(:last-child):not(:nth-last-child(2))::after {
-            content: '\2026';
+            @include fa-content($fa-volume-off);
           }
           &:not(:first-child) + .mob-prev::before {
             margin-right: 0.375rem;
@@ -195,7 +198,7 @@
             }
             &:not(.prev):not(:first-child) + .prev::before,
             &.next + .next:not(:last-child):not(:nth-last-child(2))::after {
-              content: '\2026';
+              @include fa-content($fa-volume-off);
             }
             &:not(.prev):not(:first-child) + .prev::before {
               margin-right: $component-margin-sm;
@@ -231,7 +234,7 @@
       justify-content: space-around;
       align-items: center;
       a {
-        font-family: 'KingsBureauGrot';
+        font-family: "KingsBureauGrot";
         color: $midnight-blue;
         display: flex;
         align-items: center;
