--- a/scss/activities/_database.scss
+++ b/scss/activities/_database.scss
@@ -5,10 +5,10 @@
 body[id*="page-mod-data-"] {
   ul {
     &.nav-tabs:nth-of-type(1) {
-      @extend .first-tab-nav;
+      @extend %first-tab-nav;
     }
     &.nav-tabs:nth-of-type(2) {
-      @extend .second-tab-nav;
+      @extend %second-tab-nav;
     }
   }
   nav.pagination {
@@ -18,14 +18,14 @@ body[id*="page-mod-data-"] {
     -ms-flex-pack: right !important;
     justify-content: flex-end !important;
     ul.pagination {
-      @extend .activity-pagination-container;
+      @extend %activity-pagination-container;
       li.page-item {
-        @extend .activity-pagination-button;
+        @extend %activity-pagination-button;
         a.page-link {
-          @extend .activity-pagination-button;
+          @extend %activity-pagination-button;
           &[aria-label="Next"] {
             &::after {
-              @extend .a-p-b-next;
+              @extend %a-p-b-next;
             }
             span[aria-hidden="true"] {
               display :none;
@@ -33,7 +33,7 @@ body[id*="page-mod-data-"] {
           }
           &[aria-label="Previous"] {
             &::before{
-              @extend .a-p-b-previous;
+              @extend %a-p-b-previous;
             }
             span[aria-hidden="true"] {
               display:none;
@@ -41,7 +41,7 @@ body[id*="page-mod-data-"] {
           }
         }
         &.active a.page-link {
-          @extend .a-p-b-active;
+          @extend %a-p-b-active;
         }
       }
     }
@@ -70,11 +70,8 @@ body[id*="page-mod-data-"] {
         }
       }
       input[value="Save settings"] {
-        @extend .btn, .btn-primary;
+        @extend %btn-primary;
       }
-      // #reg_search {
-      //   display: block;
-      // }
     }
   }     
   //for advanced search
@@ -122,7 +119,7 @@ body[id*="page-mod-data-"] {
       // don't want it to be centre
       text-align: left;
       input[name="saveandadd"] {
-        @extend button, .btn-secondary;
+        @extend %btn-secondary;
       }
     }
   }
@@ -153,6 +150,7 @@ body[id*="page-mod-data-"] {
     }
   }
 }
+
 // just field editing mode
 #page-mod-data-field- {
   .form-inline {
@@ -163,7 +161,7 @@ body[id*="page-mod-data-"] {
   form#sortdefault {
     input[value="Save"] {
       display: block!important;
-      @extend button,.btn-primary;
+      @extend %btn-primary;
     }
     select {
       margin:0 $component-margin-bottom-sm $component-margin-bottom-sm 0;
