--- a/scss/base/_fonts.scss
+++ b/scss/base/_fonts.scss
@@ -1,10 +1,10 @@
-/* Fonts
-   ======================== */
+// Fonts
+// ==========================
 
 // primary font used for headings
 @font-face {
-  font-family: 'KingsBureauGrot';
-  src: url('https://git.iddkingsonline.com/assets/fonts/KingsBureauGrot-ThreeSeven.ttf') format('truetype');
+  font-family: "KingsBureauGrot";
+  src: url("https://git.iddkingsonline.com/assets/fonts/KingsBureauGrot-ThreeSeven.ttf") format("truetype");
   font-weight: bold;
   font-style: normal;
 }
@@ -12,13 +12,13 @@
 // secondary fonts
 // Open Sans support font used for body text within sidebar blocks
 @font-face {
-  font-family: 'KingsBureauGrotFiveOne';
-  src: url('https://git.iddkingsonline.com/assets/fonts/KingsBureauGrot-FiveOne.ttf') format('truetype');
+  font-family: "KingsBureauGrotFiveOne";
+  src: url("https://git.iddkingsonline.com/assets/fonts/KingsBureauGrot-FiveOne.ttf") format("truetype");
   font-style: normal;
 }
 // King's Caslon Display regular support font used for quotations
 @font-face {
-  font-family: 'KingsCaslonDisplay';
-  src: url('https://git.iddkingsonline.com/assets/fonts/KingsCaslonDisplay.ttf') format('truetype');
+  font-family: "KingsCaslonDisplay";
+  src: url("https://git.iddkingsonline.com/assets/fonts/KingsCaslonDisplay.ttf") format("truetype");
   font-style: normal;
 }
