--- a/scss/components/_academicnote.scss
+++ b/scss/components/_academicnote.scss
@@ -2,12 +2,13 @@
    ======================== */
 
 .academic-note-container {
-  @extend .note-container;
+  @extend %note-container;
   // from common
-  //we added the following to make it work with 2 authors in one consultancy course: https://keats.kcl.ac.uk/mod/book/view.php?id=4621952&chapterid=426074
-  .card-author.multi-author{
-    .card-title{
-      margin-right: $component-margin!important;
+  // we added the following to make it work with 2 authors in
+  // one consultancy course: https://keats.kcl.ac.uk/mod/book/view.php?id=4621952&chapterid=426074
+  .card-author.multi-author {
+    .card-title {
+      margin-right: $component-margin !important;
     }
   }
 }
