--- a/scss/components/_alert.scss
+++ b/scss/components/_alert.scss
@@ -4,37 +4,37 @@
 // Non-alert info boxes are covered in infobox
 
 .alert {
-  @extend .info-box;
+  @extend %info-box;
   // from common
   &.alert-success {
-    @include bg-colour-opacity($pea-green, 0.2);
+    background-color: tint($pea-green, 80%);
     &::before {
-      content: '\f164';
+      @include fa-content($fa-thumbs-up);
       color: $pea-green;
       padding: 0 4px;
     }
   }
   &.alert-instructional {
-    @include bg-colour-opacity($yellow, 0.2);
+    background-color: tint($yellow, 80%);
     &::before {
-      content: '\f086';
+      @include fa-content($fa-comments);
       color: $purple70;
       padding: 0 3px;
     }
   }
   &.alert-caution {
-    @include bg-colour-opacity($yellow, 0.2);
+    background-color: tint($yellow, 80%);
     &::before {
+      @include fa-content($fa-exclamation-triangle);
       color: $kings-red;
-      content: '\f071';
       padding: 0 3px;
     }
   }
   &.alert-danger {
-    @include bg-colour-opacity($kings-red, 0.2);
+    background-color: tint($kings-red, 80%);
     &::before {
+      @include fa-content($fa-exclamation-triangle);
       color:$kings-red;
-      content: '\f071';
       padding: 0 3px;
     }
   }
@@ -52,9 +52,9 @@
       top: 1.25rem;
       width: 1.25rem;
       &::before {
-        content: "\f00d";
-        font-family: "Font Awesome 5 Free";
-        font-weight: 900;
+        @extend %icon-before;
+        @include fa-content($fa-times);
+        margin-right: 0;
         font-size: 20px;
       }
       &:hover {
