--- a/scss/components/_newcarousel.scss
+++ b/scss/components/_newcarousel.scss
@@ -8,7 +8,7 @@
       margin-bottom: $component-margin-bottom
     }
     h3, h4, h5, h6 {
-      @extend .h4;
+      @extend %h4;
     }
     width: 100%;
     max-width: 100%;
@@ -51,7 +51,6 @@
           border: 0!important;
           width: 100%;
           height: 100%;
-          margin: 0 !important;
           padding: 0 !important;
           display: flex;
           flex-direction: column;
@@ -68,7 +67,6 @@
             border: 0px;
             position: relative;
             padding: 0;
-            margin: 0;
           }
           figcaption.nc-description {
             background: transparent;
@@ -98,14 +96,14 @@
         margin: 0 !important;
         button.nc-previous {
           &::before {
-            content: "\f104";
-            @extend .icon-before;
+            @extend %icon-before;
+            @include fa-content($fa-angle-left);
           }
         }
         button.nc-next {
           &::after {
-            content: "\f105";
-            @extend .icon-before;
+            @extend %icon-before;
+            @include fa-content($fa-angle-right);
             margin-right: 0;
             margin-left: 0.375rem;
           }
